chore: Recoded message handler class and created a new builder class.